--- a/matrix_factorization/svd.ipynb
+++ b/matrix_factorization/svd.ipynb
@@ -1,24 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "e337333b-e31b-4394-98b3-0fd1985d8fe5",
+   "cell_type": "markdown",
+   "id": "2f651678-f6cb-4507-8ebb-e9faeae86348",
    "metadata": {},
    "source": [
-    "$$\\begin{pmatrix}\n",
-    "    3  & -10 & 2 \\\\\n",
-    "    -1 &   7 & 4 \\\\\n",
-    "    5  &   0 & 1\n",
-    "\\end{pmatrix}\n",
-    "\\begin{pmatrix}\n",
-    "    x\\\\ y\\\\ z\n",
-    "\\end{pmatrix}\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "   3x-10y+2z \\\\\n",
-    "   -x+7y+4z \\\\\n",
-    "   5x+z\n",
-    "\\end{pmatrix}$$"
+    "# SVD - Matrix Factorization"
    ]
   },
   {
