created images for article

--- a/matrix_factorization/svd.ipynb
+++ b/matrix_factorization/svd.ipynb
@@ -10,6 +10,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9587fb2-18cf-4ec1-a896-c8b2cac9762d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import surprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0f22a265-2b31-4ce7-9f3e-aabd2a205c7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'biased',\n",
+       " 'bsl_options',\n",
+       " 'compute_baselines',\n",
+       " 'compute_similarities',\n",
+       " 'default_prediction',\n",
+       " 'estimate',\n",
+       " 'fit',\n",
+       " 'get_neighbors',\n",
+       " 'init_mean',\n",
+       " 'init_std_dev',\n",
+       " 'lr_bi',\n",
+       " 'lr_bu',\n",
+       " 'lr_pu',\n",
+       " 'lr_qi',\n",
+       " 'n_epochs',\n",
+       " 'n_factors',\n",
+       " 'predict',\n",
+       " 'random_state',\n",
+       " 'reg_bi',\n",
+       " 'reg_bu',\n",
+       " 'reg_pu',\n",
+       " 'reg_qi',\n",
+       " 'sgd',\n",
+       " 'sim_options',\n",
+       " 'test',\n",
+       " 'verbose']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(surprise.SVD())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6109c67-ec6f-4e53-901e-6a23b05c2c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f226d1c9-c56e-4bb8-ade1-16e7f16da235",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \n",
+       "{\\displaystyle \\mathbf {M} =\\mathbf {U\\Sigma V^{T}} }\n",
+       "    $"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Math(\n",
+    "    r'''\n",
+    "{\\displaystyle \\mathbf {M} =\\mathbf {U\\Sigma V^{T}} }\n",
+    "    '''\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "197766f8-8179-4d2b-ba88-86738fcb5627",
    "metadata": {},
