added function for getting recommendations

--- a/matrix_factorization/svd.ipynb
+++ b/matrix_factorization/svd.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "10ef8637-1a0d-42ec-b838-6f4233956b93",
    "metadata": {},
    "outputs": [],
@@ -320,17 +320,46 @@
     "    \n",
     "    # sort dictionary based on similarities \n",
     "    sim_dct = {k: v for k, v in sorted(sim_dct.items(), key=lambda item: item[1], reverse = True)}\n",
-    "    return sim_dct"
+    "    return sim_dct\n",
+    "\n",
+    "def recommend(mat, id_, n_recs):\n",
+    "    '''\n",
+    "    This function will get the top n recommendations assocaited to an id.\n",
+    "    \n",
+    "    params:\n",
+    "        mat (List -> List) : A 2-D array assocaited to either the user / item matrix\n",
+    "                             after SVD\n",
+    "        id_ (Integer) : The id of the user / item you want to find similarities for.\n",
+    "                        The id must be in the range of the input matrix shape.\n",
+    "        n_recs (Integer) : The number of recommendations you want.\n",
+    "        \n",
+    "    returns:\n",
+    "        This function will return a list of ids most similar to the input id you passed.\n",
+    "    '''\n",
+    "    sim_dct = get_similarities(mat, id_)\n",
+    "    similar_ids = list(sim_dct.keys())[1:n_recs+1]\n",
+    "    return similar_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d3fe54f2-b36f-451f-98ca-98acb5d82fdb",
+   "execution_count": 12,
+   "id": "7cedfdf0-151e-49e2-ac99-5854e4b0a47c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 9, 23, 21, 34, 12, 274, 142, 495, 4]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "res = get_similarities(v, 8)"
+    "recommend(u, 8, 10)"
    ]
   },
   {
