added svd pipelien to script

--- a/matrix_factorization/svd.ipynb
+++ b/matrix_factorization/svd.ipynb
@@ -116,48 +116,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>518</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1647</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2008</td>\n",
+       "      <td>551</td>\n",
+       "      <td>288</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>412</td>\n",
-       "      <td>353</td>\n",
+       "      <td>462</td>\n",
+       "      <td>348</td>\n",
        "      <td>4</td>\n",
-       "      <td>150</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2014</td>\n",
+       "      <td>280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>191</td>\n",
-       "      <td>498</td>\n",
+       "      <td>41</td>\n",
+       "      <td>394</td>\n",
        "      <td>3</td>\n",
-       "      <td>1651</td>\n",
-       "      <td>3</td>\n",
+       "      <td>962</td>\n",
+       "      <td>15</td>\n",
        "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>931</td>\n",
-       "      <td>343</td>\n",
-       "      <td>1</td>\n",
-       "      <td>874</td>\n",
+       "      <td>24</td>\n",
+       "      <td>467</td>\n",
        "      <td>2</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>1801</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>795</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>37</td>\n",
+       "      <td>963</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1298</td>\n",
        "      <td>6</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>2003</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -165,11 +165,11 @@
       ],
       "text/plain": [
        "   song_id  artist_id  song_genre  user_id  n_listen  publish_year\n",
-       "0      518        300           5     1647         3          2008\n",
-       "1      412        353           4      150         5          2014\n",
-       "2      191        498           3     1651         3          2013\n",
-       "3      931        343           1      874         2          2006\n",
-       "4      795         27           4       37         6          2019"
+       "0      551        288           2     1171         8          2019\n",
+       "1      462        348           4      280         0          2003\n",
+       "2       41        394           3      962        15          2013\n",
+       "3       24        467           2     1801         7          2013\n",
+       "4      963         50           2     1298         6          2003"
       ]
      },
      "execution_count": 3,
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_col = 'artist_id'\n",
+    "item_col = 'song_id'\n",
     "user_col = 'user_id'\n",
     "freq_col = 'n_listen'"
    ]
@@ -226,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "(3000, 500)"
+       "(3000, 1000)"
       ]
      },
      "execution_count": 6,
@@ -256,8 +256,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.75 s, sys: 412 ms, total: 3.16 s\n",
-      "Wall time: 540 ms\n"
+      "CPU times: user 8.22 s, sys: 1.02 s, total: 9.24 s\n",
+      "Wall time: 1.51 s\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "10ef8637-1a0d-42ec-b838-6f4233956b93",
    "metadata": {},
    "outputs": [],
@@ -343,32 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "7cedfdf0-151e-49e2-ac99-5854e4b0a47c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[7, 9, 23, 21, 34, 12, 274, 142, 495, 4]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[614, 25, 206, 115, 11, 741, 2, 331, 18, 748]\n"
+     ]
     }
    ],
    "source": [
-    "recommend(u, 8, 10)"
+    "id_ = 8\n",
+    "n_recs = 10\n",
+    "print(recommend(u, id_, n_recs))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f5b1339-aa75-4e7b-b005-4d28e092059b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
