added data generation to the parallelization script

--- a/parallel/parallel.ipynb
+++ b/parallel/parallel.ipynb
@@ -41,19 +41,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2b8a96ff-c32a-46d1-824e-4776b05659e4",
+   "execution_count": 19,
+   "id": "777e679f-a397-4331-9358-ad5d6e9b017c",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a969a4e-1d63-460d-bc0e-837c979ec69e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from random import randint\n",
+    "\n",
+    "def generate_data(n_books = 3000, n_genres = 10, n_authors = 450, n_publishers = 50, n_readers = 30000, dataset_size = 100000):\n",
+    "    '''\n",
+    "    This function will generate a dataset with features associated to\n",
+    "    book data set. The dataset will have the following columns : \n",
+    "        - book_id (String) : Unique identified for the book\n",
+    "        - book_rating (Integer) : A value between 0 and 10\n",
+    "        - reader_id (String) : Unique identifier for the user\n",
+    "        - book_genre (Integer) : An integer representing a genre for the book, \n",
+    "                                 value is between 1 and 15, indicating that \n",
+    "                                 there are 15 unique genres. Each book can only\n",
+    "                                 have 1 genre\n",
+    "        - author_id (String) : Unique identifier for the author of the book\n",
+    "        - num_pages (Integer) : Random value between 70 and 500\n",
+    "        - publisher_id (String) : A unique identifier for the publisher of the book\n",
+    "        - publish_year (Integer) : The year of book publishing\n",
+    "        - book_price (Integer) : The sale price of the book\n",
+    "        - text_lang (Integer) : The language of the book - returns an integer which \n",
+    "                                is mapped to some language\n",
+    "        \n",
+    "    params:\n",
+    "        n_books (Integer) : The number of books you want the dataset to have\n",
+    "        n_genres (Integer) : Number of genres to be chosen from\n",
+    "        n_authors (Integer) : Number of authors to be generated\n",
+    "        n_publishers (Integer) : Number of publishers for the dataset\n",
+    "        n_readers (Integer) : Number of readers for the dataset\n",
+    "        dataset_size (Integer) : The number of rows to be generated \n",
+    "        \n",
+    "    example:\n",
+    "        data = generate_data()\n",
+    "    '''\n",
+    "    \n",
+    "    d = pd.DataFrame(\n",
+    "        {\n",
+    "            'book_id' : [randint(1, n_books) for _ in range(dataset_size)],\n",
+    "            'author_id' : [randint(1, n_authors) for _ in range(dataset_size)],\n",
+    "            'book_genre' : [randint(1, n_genres) for _ in range(dataset_size)],\n",
+    "            'reader_id' : [randint(1, n_readers) for _ in range(dataset_size)],\n",
+    "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
+    "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
+    "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
+    "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)],\n",
+    "            'book_price' : [randint(1, 200) for _ in range(dataset_size)],\n",
+    "            'text_lang' : [randint(1,7) for _ in range(dataset_size)]\n",
+    "        }\n",
+    "    ).drop_duplicates()\n",
+    "    return d\n",
+    "  \n",
+    "d = generate_data(dataset_size = 100000)\n",
+    "d.to_csv('data.csv', index = False)"
+   ]
   },
   {
    "cell_type": "markdown",
