changed reader_id to uuid instead of integer

--- a/parallel/parallel.ipynb
+++ b/parallel/parallel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "8cc64328-b914-4baa-a2cd-1c91ceb3be27",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
+    "import uuid\n",
     "import multiprocessing as mp"
    ]
   },
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "777e679f-a397-4331-9358-ad5d6e9b017c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
     "            'book_id' : [randint(1, n_books) for _ in range(dataset_size)],\n",
     "            'author_id' : [randint(1, n_authors) for _ in range(dataset_size)],\n",
     "            'book_genre' : [randint(1, n_genres) for _ in range(dataset_size)],\n",
-    "            'reader_id' : [randint(1, n_readers) for _ in range(dataset_size)],\n",
+    "            'reader_id' : [uuid.uuid4() for _ in range(dataset_size)],\n",
     "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
     "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
     "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
@@ -110,11 +111,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58eb753f-e6c3-4ee7-b075-a7acc6136960",
+   "execution_count": 25,
+   "id": "7193267e-87bf-4c64-86d2-dfb25d623392",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>book_genre</th>\n",
+       "      <th>reader_id</th>\n",
+       "      <th>num_pages</th>\n",
+       "      <th>book_rating</th>\n",
+       "      <th>publisher_id</th>\n",
+       "      <th>publish_year</th>\n",
+       "      <th>book_price</th>\n",
+       "      <th>text_lang</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>180</td>\n",
+       "      <td>9</td>\n",
+       "      <td>c38dad04-dfb1-4f7f-bed5-a90947200e8a</td>\n",
+       "      <td>577</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>152</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1151</td>\n",
+       "      <td>171</td>\n",
+       "      <td>7</td>\n",
+       "      <td>a2661398-debf-483f-a09f-b5756b59413b</td>\n",
+       "      <td>240</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>165</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2516</td>\n",
+       "      <td>89</td>\n",
+       "      <td>9</td>\n",
+       "      <td>409ab769-8d43-4f80-9347-549e50ec6a53</td>\n",
+       "      <td>598</td>\n",
+       "      <td>10</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>126</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>891</td>\n",
+       "      <td>148</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13e0a2c0-7314-4829-83cd-316177f14493</td>\n",
+       "      <td>554</td>\n",
+       "      <td>8</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>128</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2880</td>\n",
+       "      <td>179</td>\n",
+       "      <td>3</td>\n",
+       "      <td>54ccd5e0-3c9b-426b-b25a-ea79fb9a016e</td>\n",
+       "      <td>234</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>181</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>1446</td>\n",
+       "      <td>142</td>\n",
+       "      <td>6</td>\n",
+       "      <td>41ee9fae-bf6a-44e2-911a-879b7be8e063</td>\n",
+       "      <td>583</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>159</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>1202</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9ac2fa23-2ea3-4680-b998-03f6a241148f</td>\n",
+       "      <td>327</td>\n",
+       "      <td>7</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>121</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>1078</td>\n",
+       "      <td>211</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1da1c30b-7ab4-4c6e-b6ac-61dbcc981834</td>\n",
+       "      <td>673</td>\n",
+       "      <td>6</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>128</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>176</td>\n",
+       "      <td>129</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4d425d33-556b-4be2-b826-341fa1e1eaf4</td>\n",
+       "      <td>339</td>\n",
+       "      <td>6</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>338</td>\n",
+       "      <td>5</td>\n",
+       "      <td>782afcea-5831-451d-9e91-9f38cd0e09bf</td>\n",
+       "      <td>204</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>122</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       book_id  author_id  book_genre                             reader_id  \\\n",
+       "0         2022        180           9  c38dad04-dfb1-4f7f-bed5-a90947200e8a   \n",
+       "1         1151        171           7  a2661398-debf-483f-a09f-b5756b59413b   \n",
+       "2         2516         89           9  409ab769-8d43-4f80-9347-549e50ec6a53   \n",
+       "3          891        148           4  13e0a2c0-7314-4829-83cd-316177f14493   \n",
+       "4         2880        179           3  54ccd5e0-3c9b-426b-b25a-ea79fb9a016e   \n",
+       "...        ...        ...         ...                                   ...   \n",
+       "99995     1446        142           6  41ee9fae-bf6a-44e2-911a-879b7be8e063   \n",
+       "99996     1202         52           1  9ac2fa23-2ea3-4680-b998-03f6a241148f   \n",
+       "99997     1078        211           7  1da1c30b-7ab4-4c6e-b6ac-61dbcc981834   \n",
+       "99998      176        129           8  4d425d33-556b-4be2-b826-341fa1e1eaf4   \n",
+       "99999     1297        338           5  782afcea-5831-451d-9e91-9f38cd0e09bf   \n",
+       "\n",
+       "       num_pages  book_rating  publisher_id  publish_year  book_price  \\\n",
+       "0            577            9            24          2006         152   \n",
+       "1            240            9             8          2012         165   \n",
+       "2            598           10            41          2021         126   \n",
+       "3            554            8            39          2007         128   \n",
+       "4            234            6            12          2000         181   \n",
+       "...          ...          ...           ...           ...         ...   \n",
+       "99995        583            5             8          2015         159   \n",
+       "99996        327            7            47          2001         121   \n",
+       "99997        673            6            34          2003         128   \n",
+       "99998        339            6            46          2018          39   \n",
+       "99999        204            7            14          2007         122   \n",
+       "\n",
+       "       text_lang  \n",
+       "0              1  \n",
+       "1              6  \n",
+       "2              1  \n",
+       "3              3  \n",
+       "4              2  \n",
+       "...          ...  \n",
+       "99995          3  \n",
+       "99996          3  \n",
+       "99997          1  \n",
+       "99998          5  \n",
+       "99999          2  \n",
+       "\n",
+       "[100000 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
   },
   {
    "cell_type": "code",
